// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Color control data v0 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: {"__typename": "Swatch", "hue": 238, "lightness": 49, "saturation": 87}, default value: rgb(255,0,0) fetching swatch: resolvedValue 1`] = `"rgba(16, 24, 234, 0.5)"`;

exports[`Page Color control data v0 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: {"__typename": "Swatch", "hue": 238, "lightness": 49, "saturation": 87}, default value: rgb(255,0,0) fetching swatch: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "alpha": 0.5,
                  "swatchId": "[swatch-test-id]",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Color control data v0 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: {"__typename": "Swatch", "hue": 238, "lightness": 49, "saturation": 87}, default value: rgb(255,0,0) reading swatch from cache: resolvedValue 1`] = `"rgba(16, 24, 234, 0.5)"`;

exports[`Page Color control data v0 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: {"__typename": "Swatch", "hue": 238, "lightness": 49, "saturation": 87}, default value: rgb(255,0,0) reading swatch from cache: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {
    "Swatch": [
      {
        "id": "[swatch-test-id]",
        "value": {
          "__typename": "Swatch",
          "hue": 238,
          "id": "[swatch-test-id]",
          "lightness": 49,
          "saturation": 87,
        },
      },
    ],
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "alpha": 0.5,
                  "swatchId": "[swatch-test-id]",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Color control data v0 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: null, default value: rgb(255,0,0) fetching swatch: resolvedValue 1`] = `"rgb(255, 0, 0)"`;

exports[`Page Color control data v0 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: null, default value: rgb(255,0,0) fetching swatch: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "alpha": 0.5,
                  "swatchId": "[swatch-test-id]",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Color control data v0 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: null, default value: rgb(255,0,0) reading swatch from cache: resolvedValue 1`] = `"rgb(255, 0, 0)"`;

exports[`Page Color control data v0 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: null, default value: rgb(255,0,0) reading swatch from cache: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {
    "Swatch": [
      {
        "id": "[swatch-test-id]",
        "value": null,
      },
    ],
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "alpha": 0.5,
                  "swatchId": "[swatch-test-id]",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Color control data v1 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: {"__typename": "Swatch", "hue": 238, "lightness": 49, "saturation": 87}, default value: rgb(255,0,0) fetching swatch: resolvedValue 1`] = `"rgba(16, 24, 234, 0.5)"`;

exports[`Page Color control data v1 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: {"__typename": "Swatch", "hue": 238, "lightness": 49, "saturation": 87}, default value: rgb(255,0,0) fetching swatch: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "@@makeswift/type": "color::v1",
                  "alpha": 0.5,
                  "swatchId": "[swatch-test-id]",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Color control data v1 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: {"__typename": "Swatch", "hue": 238, "lightness": 49, "saturation": 87}, default value: rgb(255,0,0) reading swatch from cache: resolvedValue 1`] = `"rgba(16, 24, 234, 0.5)"`;

exports[`Page Color control data v1 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: {"__typename": "Swatch", "hue": 238, "lightness": 49, "saturation": 87}, default value: rgb(255,0,0) reading swatch from cache: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {
    "Swatch": [
      {
        "id": "[swatch-test-id]",
        "value": {
          "__typename": "Swatch",
          "hue": 238,
          "id": "[swatch-test-id]",
          "lightness": 49,
          "saturation": 87,
        },
      },
    ],
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "@@makeswift/type": "color::v1",
                  "alpha": 0.5,
                  "swatchId": "[swatch-test-id]",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Color control data v1 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: null, default value: rgb(255,0,0) fetching swatch: resolvedValue 1`] = `"rgb(255, 0, 0)"`;

exports[`Page Color control data v1 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: null, default value: rgb(255,0,0) fetching swatch: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {},
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "@@makeswift/type": "color::v1",
                  "alpha": 0.5,
                  "swatchId": "[swatch-test-id]",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;

exports[`Page Color control data v1 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: null, default value: rgb(255,0,0) reading swatch from cache: resolvedValue 1`] = `"rgb(255, 0, 0)"`;

exports[`Page Color control data v1 with value: {"alpha": 0.5, "swatchId": "[swatch-test-id]"}, swatch: null, default value: rgb(255,0,0) reading swatch from cache: snapshot 1`] = `
{
  "apiOrigin": "https://test-api-origin.com",
  "cacheData": {
    "Swatch": [
      {
        "id": "[swatch-test-id]",
        "value": null,
      },
    ],
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "@@makeswift/type": "color::v1",
                  "alpha": 0.5,
                  "swatchId": "[swatch-test-id]",
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
  "locale": null,
  "localizedResourcesMap": {},
  "preview": false,
}
`;
